Fixed leads list overflow error

--- a/src/pages/leads/Leads.css
+++ b/src/pages/leads/Leads.css
@@ -1,12 +1,9 @@
 .leads-content {
   position: absolute;
-  /* margin-top : 400px; */
-  padding-top:800px;
-  padding-bottom:50px;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
+  padding-top:3%;
+  padding-bottom:3%;
+  margin: 0 15%;
+  }
 
 .leads-content h1{
   text-align: center;
@@ -79,6 +76,7 @@ button:hover {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   max-width: 90%;
   max-height: 90%;
+  width: 20%;
   overflow: auto;
 }
 
